move to monorepo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,4 @@
-[package]
-name = "primer_clase"
-version = "0.1.0"
-authors = ["mlafroce <mlafroce@gmail.com>", "juanbono94@gmail.com"]
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+    "clases/clase1"
+]
